# c3s

./: .gitignore  README.md  meson.build
src/: main.cpp
tools/: format-all
